--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
     @apply font-montserrat text-slate-gray text-lg leading-7;
   }
 
-  .hover-b {
-    
-  }
+ .padding-top{
+  @apply max-xl:mt-4 sm:mt-10 md:mt-24 lg:mt-24
+ }
 }
